--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -47,8 +47,7 @@ jobs:
           Rscript -e 'bookdown::render_book("index.md", "bookdown::pdf_book", quiet=TRUE)'
           Rscript -e 'bookdown::render_book("index.md", "bookdown::gitbook", quiet=TRUE)'
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          # ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs # The folder the action should deploy.
+          branch: gh-pages # The branch the action should deploy to.
+          folder: docs # The folder the action should deploy.
