new lecture new styles

--- a/_output.yml
+++ b/_output.yml
@@ -1,8 +1,10 @@
 bookdown::pdf_book:
+  includes:
+    in_header: preamble.tex
   latex_engine: xelatex
   keep_tex: yes
-  citation_package: natbib
 bookdown::gitbook:
+  css: style.css
   split_by: chapter
   config:
     toc:
