--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -44,8 +44,8 @@ jobs:
 
       - name: Build site
         run: |
-          Rscript -e 'bookdown::render_book("index.md", "bookdown::pdf_book", quiet=TRUE)'
-          Rscript -e 'bookdown::render_book("index.md", "bookdown::gitbook", quiet=TRUE)'
+          Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book", quiet=TRUE)'
+          Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook", quiet=TRUE)'
           touch docs/.nojekyll
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
