--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,6 +9,7 @@ rmd_files: ["index.Rmd",
             "vl_04.Rmd",
             "vl_05.Rmd",
             "vl_06.Rmd",
-            "vl_07.Rmd"]
+            "vl_07.Rmd",
+            "xxx_lastpage.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
