--- a/_output.yml
+++ b/_output.yml
@@ -3,6 +3,8 @@ bookdown::pdf_book:
     in_header: preamble.tex
   latex_engine: xelatex
   keep_tex: yes
+  pandoc_args: ["--csl",
+                "arnold-mathematical-journal.csl"]
 bookdown::gitbook:
   css: style.css
   split_by: chapter
@@ -14,3 +16,5 @@ bookdown::gitbook:
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
   toc_depth: 2
+  pandoc_args: ["--csl",
+                "arnold-mathematical-journal.csl"]
