--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -10,6 +10,7 @@ rmd_files: ["index.Rmd",
             "vl_05.Rmd",
             "vl_06.Rmd",
             "vl_07.Rmd",
+            "vl_08.Rmd",
             "xxx_lastpage.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
