--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -12,7 +12,7 @@ jobs:
           persist-credentials: false
 
       - name: Setup R
-        uses: r-lib/actions/setup-r@master
+        uses: r-lib/actions/setup-r@v2
 
       - name: Install pandoc and pandoc citeproc
         run: |
